<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".view.Informes">

    <TextView
        android:id="@+id/info_tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/palanquin_medium"
        android:text="Informes"
        android:textAlignment="center"
        android:textColor="@color/gob"
        android:textSize="35dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_tv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/palanquin_medium"
            android:textAlignment="viewStart"
            android:textColor="#16D15D"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/info_tv_masculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/palanquin_medium"
            android:textAlignment="viewStart"
            android:textColor="#16D15D"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/info_tv_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/palanquin_medium"
            android:textAlignment="viewStart"
            android:textColor="#BC1FCA"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/info_tv_femenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/palanquin_medium"
            android:textAlignment="viewStart"
            android:textColor="#BC1FCA"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
            android:id="@+id/info_btn_asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="Apellido Ascendente" />

        <Button
            android:id="@+id/info_btn_desocupado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="+18 desocupados" />

    <Button
        android:id="@+id/info_btn_pobresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="Debajo limite pobreza" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/info_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/informe_layout" />

</LinearLayout>

