<?xml version="1.0" encoding="utf-8"?>
<ScrollView


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gob"
    tools:context=".view.MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@color/gob"
            android:fontFamily="@font/palanquin_medium"
            android:text="Censo 2021"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gob"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_alta"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:background="@color/gob"
                app:srcCompat="@mipmap/add" />

            <ImageButton
                android:id="@+id/btn_listar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gob"
                app:srcCompat="@mipmap/listar" />

            <ImageButton
                android:id="@+id/btn_informes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gob"
                app:srcCompat="@mipmap/informes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/palanquin"
                android:text="Censar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_listar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/palanquin"
                android:text="Listar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_informes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/palanquin"
                android:text="Informes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frg_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</ScrollView>